; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/extr_aio.c_put_ioctx.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/extr_aio.c_put_ioctx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kioctx = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.kioctx*)* @put_ioctx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @put_ioctx(%struct.kioctx* %0) #0 {
  %2 = alloca %struct.kioctx*, align 8
  store %struct.kioctx* %0, %struct.kioctx** %2, align 8
  %3 = load %struct.kioctx*, %struct.kioctx** %2, align 8
  %4 = getelementptr inbounds %struct.kioctx, %struct.kioctx* %3, i32 0, i32 0
  %5 = call i64 @atomic_read(i32* %4)
  %6 = icmp sle i64 %5, 0
  %7 = zext i1 %6 to i32
  %8 = call i32 @BUG_ON(i32 %7)
  %9 = load %struct.kioctx*, %struct.kioctx** %2, align 8
  %10 = getelementptr inbounds %struct.kioctx, %struct.kioctx* %9, i32 0, i32 0
  %11 = call i32 @atomic_dec_and_test(i32* %10)
  %12 = call i64 @unlikely(i32 %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %1
  %15 = load %struct.kioctx*, %struct.kioctx** %2, align 8
  %16 = call i32 @__put_ioctx(%struct.kioctx* %15)
  br label %17

17:                                               ; preds = %14, %1
  ret void
}

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i64 @atomic_read(i32*) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @atomic_dec_and_test(i32*) #1

declare dso_local i32 @__put_ioctx(%struct.kioctx*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
